--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
       <fileset dir="${sdk.dir}/lib/user">
         <include name="**/*.jar" />
       </fileset>
-      <fileset dir="src/lib">
+      <fileset dir="lib">
         <include name="**/*.jar" />
       </fileset>
     </copy>
